--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "IRANYekanMobileRegular";
+  font-style: normal;
+  font-weight: 400;
+  src: url('assets/fonts/IRANYekanMobileRegular.woff2');
+  src: url('assets/fonts/IRANYekanMobileRegular.woff2') format('woff');
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +12,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  direction: rtl;
 }
+*{
+  font-family:"IRANYekanMobileRegular" , sans-serif;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+::-webkit-scrollbar{
+  width: 6px;
+  background-color: #0C132C;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #182040;
+  width: 6px;
+  border-radius: 34px;
 }
