--- a/src/components/Users.module.css
+++ b/src/components/Users.module.css
@@ -24,7 +24,7 @@
 
 .Search {
     background: linear-gradient(200.68deg, #020B1F 0%, #0C132C 82.07%);
-    width: 300px;
+    width: 50rem;
     height: 35px;
     outline: none;
     border-radius: 14px;
